[project]
name = "pixel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.139.0",
    "langchain>=1.3.11",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-huggingface>=1.2.2",
    "langchain-postgres>=0.0.17",
    "langchain-text-splitters>=1.1.2",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.6.0",
    "uvicorn>=0.50.0",
]
